--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,29 @@
 * {
-    background-color: black;
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-link {
-    color: white;
-    
+a:link {
+    color: black;
+    background-color: grey;    
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 20px;
+}
+a:visited {
+    color: black;
+    text-shadow: black;
+}
+a:hover {
+    color: black;
+    background-color: red;
+    font-size: 25px;
+    text-shadow: 10;
+}
+ul{
+    padding-top: 10px;
+    padding-bottom: 100px;
+
 }
 p {
     color: white;
@@ -12,12 +31,16 @@ p {
     font-weight: 700;
     text-align: center;
 }
- .headline {
-    color: aliceblue;
+ .headline:hover {
+    color: rgb(245, 9, 9);
  }
 
  img {
     height: auto;
     width: 500px;
+    border-radius: 10px ;
+
+ }
+ h2{
 
  }
